; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mach_right.c_mach_right_send_once_create.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_mach_right.c_mach_right_send_once_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@MACH_PORT_NULL = common dso_local global i32 0, align 4
@MACH_MSG_TYPE_MAKE_SEND_ONCE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"create send-once right\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mach_right_send_once_create(i32 %0) #0 {
  %2 = alloca %struct.TYPE_3__, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  store i32 %0, i32* %6, align 4
  store i32 0, i32* %3, align 4
  %7 = load i32, i32* @MACH_PORT_NULL, align 4
  store i32 %7, i32* %4, align 4
  %8 = call i32 (...) @mach_task_self()
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %2, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = load i32, i32* @MACH_MSG_TYPE_MAKE_SEND_ONCE, align 4
  %12 = call i32 @mach_port_extract_right(i32 %8, i32 %10, i32 %11, i32* %4, i32* %3)
  store i32 %12, i32* %5, align 4
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @_mach_assert(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i32 %13)
  %15 = load i32, i32* %4, align 4
  %16 = call i32 @mach_right_send_once(i32 %15)
  ret i32 %16
}

declare dso_local i32 @mach_port_extract_right(i32, i32, i32, i32*, i32*) #1

declare dso_local i32 @mach_task_self(...) #1

declare dso_local i32 @_mach_assert(i8*, i32) #1

declare dso_local i32 @mach_right_send_once(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
